--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "bonapp",
-  "version": "1.0.0",
-  "description": "Meal Ordering and Delivery Platform",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon ./01_BLL/src/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ofir5551/BonApp.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ofir5551/BonApp/issues"
-  },
-  "homepage": "https://github.com/ofir5551/BonApp#readme",
-  "dependencies": {
-    "bcrypt": "^4.0.1",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.15"
-  }
+    "name": "bonapp",
+    "version": "1.0.0",
+    "description": "Meal Ordering and Delivery Platform",
+    "main": "index.js",
+    "scripts": {
+        "dev": "(cd 02_UIL/client && npm run build) & nodemon ./01_BLL/src/index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ofir5551/BonApp.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/ofir5551/BonApp/issues"
+    },
+    "homepage": "https://github.com/ofir5551/BonApp#readme",
+    "dependencies": {
+        "bcrypt": "^4.0.1",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.9.15"
+    }
 }
