--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "bcrypt": "^4.0.1",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.9.15"
+        "mongoose": "^5.9.15",
+        "validator": "^13.1.1"
     }
 }
