--- a/02_UIL/client/package.json
+++ b/02_UIL/client/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser-dynamic": "~9.1.0",
         "@angular/router": "~9.1.0",
         "bootstrap": "^4.5.0",
+        "font-awesome": "^4.7.0",
         "rxjs": "~6.5.4",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
@@ -35,12 +36,12 @@
         "codelyzer": "^5.1.2",
         "jasmine-core": "~3.5.0",
         "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~4.4.1",
+        "karma": "^5.1.0",
         "karma-chrome-launcher": "~3.1.0",
         "karma-coverage-istanbul-reporter": "~2.1.0",
         "karma-jasmine": "~3.0.1",
         "karma-jasmine-html-reporter": "^1.4.2",
-        "protractor": "~5.4.3",
+        "protractor": "^7.0.0",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
         "typescript": "~3.8.3"
