--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dependencies": {
         "bcrypt": "^4.0.1",
         "express": "^4.17.1",
+        "jquery": "^3.5.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.15",
+        "popper.js": "^1.16.1",
         "validator": "^13.1.1"
     }
 }
