--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/ofir5551/BonApp#readme",
     "dependencies": {
         "bcrypt": "^4.0.1",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "jquery": "^3.5.1",
         "jsonwebtoken": "^8.5.1",
