--- a/02_UIL/client/package.json
+++ b/02_UIL/client/package.json
@@ -25,6 +25,7 @@
         "popper.js": "^1.16.1",
         "rxjs": "~6.5.4",
         "tslib": "^1.10.0",
+        "web-animations-js": "^2.3.2",
         "zone.js": "~0.10.2"
     },
     "devDependencies": {
