--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "Meal Ordering and Delivery Platform",
     "main": "index.js",
     "scripts": {
-        "dev": "(cd 02_UIL/client && ng build) & nodemon ./01_BLL/src/index.js",
-        "ngDev": "(cd 02_UIL/client && npm run start)"
+        "server":"nodemon 01_BLL/src/index.js ",
+        "ng": "(cd 02_UIL/client && ng serve)",
+        "dev": "(cd 02_UIL/client && ng build) & nodemon ./01_BLL/src/index.js"
     },
     "repository": {
         "type": "git",
