--- a/02_UIL/client/package.json
+++ b/02_UIL/client/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.3.6",
     "tslib": "^1.10.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
