--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "express": "^4.17.1",
         "jquery": "^3.5.1",
         "jsonwebtoken": "^8.5.1",
+        "moment": "^2.29.1",
         "mongoose": "^5.9.15",
         "popper.js": "^1.16.1",
         "validator": "^13.1.1"
