--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "bcrypt": "^5.0.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "file-saver": "^2.0.2",
         "jquery": "^3.5.1",
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.29.1",
