--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "dependencies": {
         "bcrypt": "^5.0.0",
         "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "file-saver": "^2.0.2",
         "jquery": "^3.5.1",
         "jsonwebtoken": "^8.5.1",
         "moment": "^2.29.1",
         "mongoose": "^5.9.15",
+        "nodemailer": "^6.4.14",
         "popper.js": "^1.16.1",
         "validator": "^13.1.1"
     }
