--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "file-saver": "^2.0.2",
         "jquery": "^3.5.1",
         "jsonwebtoken": "^8.5.1",
+        "mailgen": "^2.0.14",
         "moment": "^2.29.1",
         "mongoose": "^5.9.15",
         "nodemailer": "^6.4.14",
